ingress/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: npvet-frontend-ingress
  namespace: npvet-k8s
spec:
  rules:
    - host: npvet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: npvet-frontend
                port:
                  number: 80
