ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: npvet-ingress
  namespace: npvet-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: npvet.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: npvet-backend-service
                port:
                  number: 8090
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: npvet-frontend
                port:
                  number: 80
